tests/fixtures/invalid/pow_float_set_int.py
# Cannot call pow() with Float, Set[int], Int
x = pow(1.0, {1, 2, 3}, 1)
